# GQMM

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
csrc/: CMakeLists.txt  binding.cpp  binding.h  dequant.cu  dequant.cuh  gemm.cu  helper.cuh  numeric.cuh
gpt_oss/: chat.py  generate.py
gqmm/: __init__.py
gqmm/_C/: __init__.pyi
gqmm/testing/: __init__.py
tests/: test_dequant.py  test_gemm.py
