[project]
name = "gqmm"
version = "0.1.0"
description = "GQMM(General Quantized Matrix Multiplication Library)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nanobind>=2.9.2",
    "numpy>=2.3.3",
    "torch>=2.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
