[project]
name = "gqmm"
version = "0.1.0"
description = "GQMM(General Quantized Matrix Multiplication Library)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hexdump>=3.3",
    "nanobind>=2.9.2",
    "numpy>=2.3.3",
    "openai-harmony>=0.0.4",
    "safetensors>=0.6.2",
    "termcolor>=3.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
